--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,4 @@ sudo: false
 install: true
 
 script:
-  - env GO111MODULE=on go build 
-  - env GO111MODULE=on go test
+  - env GO111MODULE=on go test ./...
